<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActionBar1</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_updates">Updates</string>
    <string name="action_new_message">New Message</string>
    
    <string name="hello_world">Hello world!</string>
	<string name="search_hint">Search</string>
    
</resources>
