<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_search" 
        android:showAsAction="always" 
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:actionViewClass="android.widget.SearchView">
    </item>
	<item android:id="@+id/action_location_found" 
        android:showAsAction="ifRoom" 
        android:icon="@drawable/ic_action_location_found"
        android:title="@string/action_location_found">
    </item>
	<item android:id="@+id/action_refresh" 
        android:showAsAction="ifRoom" 
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh">
    </item>
	<item android:id="@+id/action_help" 
        android:showAsAction="never" 
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help">
    </item>
    <item android:id="@+id/action_check_updates" 
        android:showAsAction="never" 
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_updates">
    </item>    
</menu>
